Fixes the scrollbar issue caused by #1
Fixes the scroll bar not being visible on dark mode, but being visible on light mode, by getting rid of the dark mode scrollbar CSS. Previously it was defined before --mono-rgb-100 could be defined.

--- a/theme.css
+++ b/theme.css
@@ -73,7 +73,7 @@ body {
   
 	/* Blockquotes 
 	*/
-	--blockquote-border-thickness: 2px;
+	--blockquote-border-thickness: 5px;
 	--blockquote-border-color: var(--interactive-accent);
 	--blockquote-font-style: normal;
 	--blockquote-color: inherit;
@@ -477,12 +477,6 @@ body {
 	--ribbon-width: 44px;
 	--ribbon-padding: var(--size-4-2) var(--size-4-1) var(--size-4-3);
   
-	/* Scrollbars 
-	*/
-	--scrollbar-active-thumb-bg: rgba(var(--mono-rgb-100), 0.2);
-	--scrollbar-bg: rgba(var(--mono-rgb-100), 0.05);
-	--scrollbar-thumb-bg: rgba(var(--mono-rgb-100), 0.1);
-  
 	/* Search 
 	*/
 	--search-clear-button-color: var(--text-muted);
@@ -696,11 +690,6 @@ body {
 	--interactive-accent: var(--color-accent-1);
 	--interactive-accent-hover: var(--color-accent-2);
 
-	/* scrollbars
-	*/
-	--scrollbar-active-thumb-bg: rgba(var(--mono-rgb-100) 0.9);
-	--scrollbar-bg: rgba(var(--mono-rgb-100) 0.9);
-	--scrollbar-thumb-bg: rgba(var(--mono-rgb-100) 0.9);
   }
   
   .theme-light {
@@ -770,6 +759,12 @@ body {
 	--colorPrimary--complement: hsl(calc(var(--accent-h) + 180), var(--accent-s), var(--accent-l));
 	--colorPrimary--complement-120: hsl(calc(var(--accent-h) + 120), var(--accent-s), var(--accent-l));
 	--colorPrimary--complement-240: hsl(calc(var(--accent-h) + 240), var(--accent-s), var(--accent-l));
+	/* Scrollbars 
+	*/
+	--scrollbar-active-thumb-bg: rgba(var(--mono-rgb-100), 0.2);
+	--scrollbar-bg: rgba(var(--mono-rgb-100), 0.05);
+	--scrollbar-thumb-bg: rgba(var(--mono-rgb-100), 0.1);
+  
   }
   
   .theme-dark {
@@ -841,6 +836,7 @@ body {
 	*/
 
 	body {
+	
 		--file-line-width: 74ch;
 	
 		--transition-05: all 0.3s cubic-bezier(0.25, 0.46, 0.46, 0.95);
